// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileCard should be rendered correctly 1`] = `
<div
  className="fileCardWrapper uui-loading"
  style={
    Object {
      "alignSelf": undefined,
      "flexBasis": "100%",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "minWidth": 0,
      "textAlign": undefined,
    }
  }
>
  <div
    className="root size-36 background-none spacing-6 fileCardRow container align-items-top"
  >
    <div
      className="container uui-icon uui-enabled root icon-container-color-gray60 xlsColor"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        width={24}
      />
    </div>
    <div
      className=""
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "100%",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="root font-sans text-color-gray60 line-height-18 font-size-14 v-padding-0 fileName container"
      >
        Test
      </div>
      <div
        className="root font-sans text-color-gray60 line-height-18 font-size-14 v-padding-0 container"
      >
        XLS, 
        0 Bytes of 
        12.25 KB
      </div>
    </div>
    <div
      className=""
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "0",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": "18px",
          "textAlign": undefined,
        }
      }
    >
      <svg
        className="root"
        height={18}
        width={18}
      >
        <circle
          cx={9}
          cy={9}
          fill="transparent"
          r={3}
          stroke="#ACAFBF"
          strokeDasharray={18.84955592153876}
          strokeDashoffset={18.84955592153876}
          strokeWidth={6}
        />
        <circle
          cx={9}
          cy={9}
          fill="transparent"
          r={8}
          stroke="#ACAFBF"
          strokeWidth={1}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FileCard should be rendered correctly 2`] = `
<div
  className="fileCardWrapper uui-loading"
  style={
    Object {
      "alignSelf": undefined,
      "flexBasis": "0",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "minWidth": "140px",
      "textAlign": undefined,
    }
  }
>
  <div
    className="root size-36 background-none spacing-6 fileCardRow container align-items-top"
  >
    <div
      className="container uui-icon uui-enabled root icon-container-color-gray60 docColor"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        width={24}
      />
    </div>
    <div
      className=""
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "100%",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="root font-sans text-color-gray60 line-height-18 font-size-14 v-padding-0 fileName container"
      >
        Test
      </div>
      <div
        className="root font-sans text-color-gray60 line-height-18 font-size-14 v-padding-0 container"
      >
        DOC, 
        0 Bytes of 
        12.25 KB
      </div>
    </div>
    <div
      className=""
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "0",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": "18px",
          "textAlign": undefined,
        }
      }
    >
      <svg
        className="root"
        height={18}
        width={18}
      >
        <circle
          cx={9}
          cy={9}
          fill="transparent"
          r={3}
          stroke="#ACAFBF"
          strokeDasharray={18.84955592153876}
          strokeDashoffset={18.84955592153876}
          strokeWidth={6}
        />
        <circle
          cx={9}
          cy={9}
          fill="transparent"
          r={8}
          stroke="#ACAFBF"
          strokeWidth={1}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FileCard should be rendered correctly 3`] = `
<div
  className="fileCardWrapper uui-loading"
  style={
    Object {
      "alignSelf": undefined,
      "flexBasis": "0",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "minWidth": "140px",
      "textAlign": undefined,
    }
  }
>
  <div
    className="root size-36 background-none spacing-6 fileCardRow container align-items-top"
  >
    <div
      className="container uui-icon uui-enabled root icon-container-color-gray60 imgColor"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        width={24}
      />
    </div>
    <div
      className=""
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "100%",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-0 fileName container"
      >
        Test
      </div>
      <div
        className="root font-sans text-color-gray60 line-height-18 font-size-14 v-padding-0 container"
      >
        GIF, 
        12.25 KB of 
        12.25 KB
      </div>
    </div>
    <div
      className=""
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "0",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": "18px",
          "textAlign": undefined,
        }
      }
    >
      <svg
        className="root"
        height={18}
        width={18}
      >
        <circle
          cx={9}
          cy={9}
          fill="transparent"
          r={3}
          stroke="#ACAFBF"
          strokeDasharray={18.84955592153876}
          strokeDashoffset={0}
          strokeWidth={6}
        />
        <circle
          cx={9}
          cy={9}
          fill="transparent"
          r={8}
          stroke="#ACAFBF"
          strokeWidth={1}
        />
      </svg>
    </div>
  </div>
</div>
`;
